didikam-examples/volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer
  labels:
    name: nodejs-writer
spec:
  volumes:
    - name: html
      hostPath:  
        path: /home/didik/belajar/belajar-kubernetes/html  # Ganti dengan path yang sesuai di node  
        type: Directory 
  containers:
    - name: nodejs-writer
      image: khannedy/nodejs-writer
      volumeMounts:
        - mountPath: /app/html
          name: html
