didikam-examples/service-nginx-ingress.yaml
  
apiVersion: v1  
kind: Service  
metadata:  
  name: nginx-service  
spec:  
  selector:  
    name: nginx  
  ports:  
    - port: 80  
      targetPort: 80  
  
---
  
apiVersion: networking.k8s.io/v1  # Perbarui versi API di sini  
kind: Ingress  
metadata:  
  name: nginx-ingress  
  labels:  
    name: nginx-ingress  
spec:  
  rules:  
    - host: nginx.didikam.local  
      http:  
        paths:  
          - path: /  
            pathType: Prefix  # Tambahkan pathType  
            backend:  
              service:  
                name: nginx-service  # Perbarui ke format baru  
                port:  
                  number: 80  # Perbarui ke format baru
