didikam-examples/service-with-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nginx-ingress-rewrite@kubernetescrd
spec:
  rules:
    - host: service.didikam.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nginx-ingress-rewrite
  namespace: default
spec:
  replacePathRegex:
    regex: ^/service1(.*)
    replacement: $1
